--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ find_library(SSH_LIB ssh)
 if(NOT SSH_LIB)
     message(FATAL_ERROR "libssh not found")
 endif()
-add_executable(SP src/main.cpp)
+add_executable(SP src/main.cpp src/SSHClient.cpp)
 #target_link_libraries(web ${X11_LIBRARIES})
 
 target_link_libraries(SP  ${SSH_LIB})
